--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(encryption_3des)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(encryption_3des main.cpp)
+add_executable(encryption_3des main.cpp Sequence.cpp Sequence.h)
