resolve external symbol issue on << operator for SequenceD and comment unimplemented classes

--- a/3des_encryption/3des_encryption.vcxproj
+++ b/3des_encryption/3des_encryption.vcxproj
@@ -149,11 +149,13 @@
   <ItemGroup>
     <ClCompile Include="3des_encryption.cpp" />
     <ClCompile Include="helper.cpp" />
+    <ClCompile Include="KeyGen.cpp" />
     <ClCompile Include="Permutation.cpp" />
     <ClCompile Include="Sequence.cpp" />
     <ClCompile Include="SequenceD.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="KeyGen.h" />
     <ClInclude Include="Permutation.h" />
     <ClInclude Include="Sequence.h" />
     <ClInclude Include="SequenceD.h" />
