--- a/3des_encryption/3des_encryption.vcxproj
+++ b/3des_encryption/3des_encryption.vcxproj
@@ -148,6 +148,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="3des_encryption.cpp" />
+    <ClCompile Include="F.cpp" />
     <ClCompile Include="helper.cpp" />
     <ClCompile Include="KeyGen.cpp" />
     <ClCompile Include="Permutation.cpp" />
@@ -157,6 +158,7 @@
     <ClCompile Include="S_fonction.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="F.h" />
     <ClInclude Include="KeyGen.h" />
     <ClInclude Include="Permutation.h" />
     <ClInclude Include="Sbox.h" />
