--- a/3des_encryption/3des_encryption.vcxproj.filters
+++ b/3des_encryption/3des_encryption.vcxproj.filters
@@ -71,5 +71,8 @@
     <ClInclude Include="Finv.h">
       <Filter>Fichiers d%27en-tête</Filter>
     </ClInclude>
+    <ClInclude Include="DES.h">
+      <Filter>Fichiers d%27en-tête</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
