DES, DESinv, Crypt & Decrypt

--- a/3des_encryption/3des_encryption.vcxproj
+++ b/3des_encryption/3des_encryption.vcxproj
@@ -148,6 +148,10 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="3des_encryption.cpp" />
+    <ClCompile Include="Crypt.cpp" />
+    <ClCompile Include="Decrypt.cpp" />
+    <ClCompile Include="DES.cpp" />
+    <ClCompile Include="DESinv.cpp" />
     <ClCompile Include="F.cpp" />
     <ClCompile Include="Finv.cpp" />
     <ClCompile Include="helper.cpp" />
@@ -159,7 +163,10 @@
     <ClCompile Include="S_fonction.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Crypt.h" />
+    <ClInclude Include="Decrypt.h" />
     <ClInclude Include="DES.h" />
+    <ClInclude Include="DESinv.h" />
     <ClInclude Include="F.h" />
     <ClInclude Include="Finv.h" />
     <ClInclude Include="KeyGen.h" />
