--- a/3des_encryption/3des_encryption.vcxproj
+++ b/3des_encryption/3des_encryption.vcxproj
@@ -157,7 +157,7 @@
     <ClCompile Include="helper.cpp" />
     <ClCompile Include="KeyGen.cpp" />
     <ClCompile Include="Permutation.cpp" />
-    <ClCompile Include="Sbox.cpp" />
+    <ClCompile Include="s_box.cpp" />
     <ClCompile Include="Sequence.cpp" />
     <ClCompile Include="SequenceD.cpp" />
     <ClCompile Include="S_fonction.cpp" />
@@ -171,7 +171,7 @@
     <ClInclude Include="f_inv.h" />
     <ClInclude Include="KeyGen.h" />
     <ClInclude Include="Permutation.h" />
-    <ClInclude Include="Sbox.h" />
+    <ClInclude Include="s_box.h" />
     <ClInclude Include="Sequence.h" />
     <ClInclude Include="SequenceD.h" />
     <ClInclude Include="S_fonction.h" />
