read and write to file 8 char by 8 char OK

--- a/3des_encryption/3des_encryption.vcxproj
+++ b/3des_encryption/3des_encryption.vcxproj
@@ -176,6 +176,10 @@
     <ClInclude Include="sequence_d.h" />
     <ClInclude Include="s_fonction.h" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="clear_text.txt" />
+    <Text Include="encrypted_text.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
