--- a/3des_encryption/3des_encryption.vcxproj
+++ b/3des_encryption/3des_encryption.vcxproj
@@ -178,6 +178,8 @@
   </ItemGroup>
   <ItemGroup>
     <Text Include="clear_text.txt" />
+    <Text Include="decrypted.txt" />
+    <Text Include="encrypted_in.txt" />
     <Text Include="encrypted_text.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
